--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header section">
       <div class="header__container container">
-        <a class="header__logo-link" href="./index.html"
+        <a class="logo-link header__logo-link" href="./index.html"
           ><svg class="header__logo" width="134" height="54">
             <use class="header__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
           </svg>
@@ -39,17 +39,138 @@
             Узнайте, сколько килограмм вы сможете сбросить с Keto диетой
           </h1>
           <h2 class="select-gender__list-title">Следуйте этим шагам:</h2>
-          <ol class="select-gender__list">
+          <ol class="select-gender__list" id="gender__box">
             <li class="select-gender__list-item">Выберите пол</li>
             <li class="select-gender__list-item">Выберите любимые продукты</li>
             <li class="select-gender__list-item">Выберите наиболее близкий к вашему образ жизни</li>
             <li class="select-gender__list-item">Введите свои параметры</li>
             <li class="select-gender__list-item">Получите персонализированный план питания</li>
           </ol>
+          <div class="select-gender__box">
+            <a class="select-gender__wrap select-gender__wrap--female">
+              <div class="select-gender__button-background">
+                <div
+                  class="select-gender__button-background-first-circle select-gender__button-background-first-circle--female"
+                ></div>
+                <div
+                  class="select-gender__button-background-second-circle select-gender__button-background-second-circle--female"
+                ></div>
+              </div>
+              <div class="select-gender__button-content select-gender__button-content--female">
+                <svg class="select-gender__button-content-icon" width="77" height="95">
+                  <use href="./images/symbol-defs.svg#icon-gender-women"></use>
+                </svg>
+                <p class="select-gender__button-content-desc">Женский</p>
+              </div>
+            </a>
+            <p class="select-gender__button-content-desc">или</p>
+            <a class="select-gender__wrap select-gender__wrap--male">
+              <div class="select-gender__button-background">
+                <div
+                  class="select-gender__button-background-first-circle select-gender__button-background-first-circle--male"
+                ></div>
+                <div
+                  class="select-gender__button-background-second-circle select-gender__button-background-second-circle--male"
+                ></div>
+              </div>
+              <div class="select-gender__button-content select-gender__button-content--male">
+                <svg class="select-gender__button-content-icon" width="77" height="95">
+                  <use href="./images/symbol-defs.svg#icon-gender-man"></use>
+                </svg>
+                <p class="select-gender__button-content-desc">Мужской</p>
+              </div>
+            </a>
+          </div>
         </div>
       </section>
-      <section class="section motivation__section"></section>
+      <section class="section motivation__section">
+        <h2 class="motivation__heading">Добейтесь поставленных целей с нашей Keto-инструкцией</h2>
+        <ul class="motivation__list">
+          <li class="motivation__list-item">
+            <img src="./images/list.svg" width="50" height="50" />
+            <h3 class="motivation__list-item-heading">Список покупок на неделю</h3>
+            <p class="motivation__list-item-desc">
+              Не теряйте драгоценное время на планирование покупок, получите список продуктов на
+              неделю, чтобы готовить вкуснейшие блюда из вашего персонализированного Keto-плана с
+              простыми ингредиентами, которые вы можете купить в любом магазине.
+            </p>
+          </li>
+          <li class="motivation__list-item">
+            <img src="./images/gid.svg" width="50" height="50" />
+            <h3 class="motivation__list-item-heading">Детальный гид по Keto</h3>
+            <p class="motivation__list-item-desc">
+              Самый полный пошаговый гид по Keto специально разработанный опытным
+              диетологом-нутрициологом, чтобы помочь вам достичь целей в здоровом темпе. Узнайте,
+              что точно подойдет для кето, едите вы дома или в ресторане.
+            </p>
+          </li>
+          <li class="motivation__list-item">
+            <img src="./images/dev.svg" width="50" height="50" />
+            <h3 class="motivation__list-item-heading">Разработан специально для вас</h3>
+            <p class="motivation__list-item-desc">
+              Запутались в разнообразии низкоуглеводных диет? Позвольте нам подсчитать углеводы и
+              калории за вас и создать персонализированный план питания, основанный на ваших любимых
+              продуктах, вашем образе жизни, возрасте, параметрах и целях в весе.
+            </p>
+          </li>
+          <li class="motivation__list-item">
+            <img src="./images/fast.svg" width="50" height="50" />
+            <h3 class="motivation__list-item-heading">Быстрое приготовление блюд</h3>
+            <p class="motivation__list-item-desc">
+              Интересные и простые в приготовлении Keto-рецепты с четкой информацией по пищевой
+              ценности, что превращает приготовление из простой домашней обязанности в идеальный
+              момент умиротворения. Чтобы стать кето-шефом не нужны никакие особые кухонные
+              принадлежности.
+            </p>
+          </li>
+          <li class="motivation__list-item">
+            <img src="./images/subscribe.svg" width="50" height="50" />
+            <h3 class="motivation__list-item-heading">Одна подписка – море пользы</h3>
+            <p class="motivation__list-item-desc">
+              Получайте свежие рецепты каждый месяц прямо на свой любимый девайс, стабильно теряя
+              вес и подстраивайте план под свой прогресс (просто обратитесь в нашу службу
+              поддержки). Оставайтесь в курсе новинок и последних Keto-трендов с нашими VIP-постами.
+            </p>
+          </li>
+          <li class="motivation__list-item">
+            <img src="./images/free-profile.svg" width="50" height="50" />
+            <h3 class="motivation__list-item-heading">Мгновенный бесплатный профиль диеты</h3>
+            <p class="motivation__list-item-desc">
+              Сразу после заполнения опроса вы увидите свой индекс массы тела (ИМТ) и метаболический
+              возраст. Также вы получите рекомендации по поводу ежедневного потребления калорий и
+              воды. И все это бесплатно.
+            </p>
+          </li>
+        </ul>
+        <div class="motivation__button-wrap">
+          <a class="motivation__button" href="#gender__box">Начать</a>
+        </div>
+      </section>
     </main>
+    <footer class="section footer__section">
+      <div class="container footer__container">
+        <ul class="footer__menu">
+          <li class="footer__menu-item"><a class="footer__menu-link" href="">Блог</a></li>
+          <li class="footer__menu-item"><a class="footer__menu-link" href="">Общие условия</a></li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="">Политика защиты данных</a>
+          </li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="">Обработка куки-файлов</a>
+          </li>
+          <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
+        </ul>
+        <a class="logo-link logo-link--footer" href="./index.html"
+          ><svg class="footer__logo" width="134" height="54">
+            <use class="footer__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
+          </svg>
+        </a>
+        <div class="footer__license-wrap">
+          <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
+          <p class="footer__license-desc">Разработано AppsForFit</p>
+        </div>
+      </div>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
