--- a/src/index.html
+++ b/src/index.html
@@ -84,66 +84,69 @@
         </div>
       </section>
       <section class="section motivation__section">
-        <h2 class="motivation__heading">Добейтесь поставленных целей с нашей Keto-инструкцией</h2>
-        <ul class="motivation__list">
-          <li class="motivation__list-item">
-            <img src="./images/list.svg" width="50" height="50" />
-            <h3 class="motivation__list-item-heading">Список покупок на неделю</h3>
-            <p class="motivation__list-item-desc">
-              Не теряйте драгоценное время на планирование покупок, получите список продуктов на
-              неделю, чтобы готовить вкуснейшие блюда из вашего персонализированного Keto-плана с
-              простыми ингредиентами, которые вы можете купить в любом магазине.
-            </p>
-          </li>
-          <li class="motivation__list-item">
-            <img src="./images/gid.svg" width="50" height="50" />
-            <h3 class="motivation__list-item-heading">Детальный гид по Keto</h3>
-            <p class="motivation__list-item-desc">
-              Самый полный пошаговый гид по Keto специально разработанный опытным
-              диетологом-нутрициологом, чтобы помочь вам достичь целей в здоровом темпе. Узнайте,
-              что точно подойдет для кето, едите вы дома или в ресторане.
-            </p>
-          </li>
-          <li class="motivation__list-item">
-            <img src="./images/dev.svg" width="50" height="50" />
-            <h3 class="motivation__list-item-heading">Разработан специально для вас</h3>
-            <p class="motivation__list-item-desc">
-              Запутались в разнообразии низкоуглеводных диет? Позвольте нам подсчитать углеводы и
-              калории за вас и создать персонализированный план питания, основанный на ваших любимых
-              продуктах, вашем образе жизни, возрасте, параметрах и целях в весе.
-            </p>
-          </li>
-          <li class="motivation__list-item">
-            <img src="./images/fast.svg" width="50" height="50" />
-            <h3 class="motivation__list-item-heading">Быстрое приготовление блюд</h3>
-            <p class="motivation__list-item-desc">
-              Интересные и простые в приготовлении Keto-рецепты с четкой информацией по пищевой
-              ценности, что превращает приготовление из простой домашней обязанности в идеальный
-              момент умиротворения. Чтобы стать кето-шефом не нужны никакие особые кухонные
-              принадлежности.
-            </p>
-          </li>
-          <li class="motivation__list-item">
-            <img src="./images/subscribe.svg" width="50" height="50" />
-            <h3 class="motivation__list-item-heading">Одна подписка – море пользы</h3>
-            <p class="motivation__list-item-desc">
-              Получайте свежие рецепты каждый месяц прямо на свой любимый девайс, стабильно теряя
-              вес и подстраивайте план под свой прогресс (просто обратитесь в нашу службу
-              поддержки). Оставайтесь в курсе новинок и последних Keto-трендов с нашими VIP-постами.
-            </p>
-          </li>
-          <li class="motivation__list-item">
-            <img src="./images/free-profile.svg" width="50" height="50" />
-            <h3 class="motivation__list-item-heading">Мгновенный бесплатный профиль диеты</h3>
-            <p class="motivation__list-item-desc">
-              Сразу после заполнения опроса вы увидите свой индекс массы тела (ИМТ) и метаболический
-              возраст. Также вы получите рекомендации по поводу ежедневного потребления калорий и
-              воды. И все это бесплатно.
-            </p>
-          </li>
-        </ul>
-        <div class="motivation__button-wrap">
-          <a class="motivation__button" href="#gender__box">Начать</a>
+        <div class="container">
+          <h2 class="motivation__heading">Добейтесь поставленных целей с нашей Keto-инструкцией</h2>
+          <ul class="motivation__list">
+            <li class="motivation__list-item">
+              <img src="./images/list.svg" width="50" height="50" />
+              <h3 class="motivation__list-item-heading">Список покупок на неделю</h3>
+              <p class="motivation__list-item-desc">
+                Не теряйте драгоценное время на планирование покупок, получите список продуктов на
+                неделю, чтобы готовить вкуснейшие блюда из вашего персонализированного Keto-плана с
+                простыми ингредиентами, которые вы можете купить в любом магазине.
+              </p>
+            </li>
+            <li class="motivation__list-item">
+              <img src="./images/gid.svg" width="50" height="50" />
+              <h3 class="motivation__list-item-heading">Детальный гид по Keto</h3>
+              <p class="motivation__list-item-desc">
+                Самый полный пошаговый гид по Keto специально разработанный опытным
+                диетологом-нутрициологом, чтобы помочь вам достичь целей в здоровом темпе. Узнайте,
+                что точно подойдет для кето, едите вы дома или в ресторане.
+              </p>
+            </li>
+            <li class="motivation__list-item">
+              <img src="./images/dev.svg" width="50" height="50" />
+              <h3 class="motivation__list-item-heading">Разработан специально для вас</h3>
+              <p class="motivation__list-item-desc">
+                Запутались в разнообразии низкоуглеводных диет? Позвольте нам подсчитать углеводы и
+                калории за вас и создать персонализированный план питания, основанный на ваших
+                любимых продуктах, вашем образе жизни, возрасте, параметрах и целях в весе.
+              </p>
+            </li>
+            <li class="motivation__list-item">
+              <img src="./images/fast.svg" width="50" height="50" />
+              <h3 class="motivation__list-item-heading">Быстрое приготовление блюд</h3>
+              <p class="motivation__list-item-desc">
+                Интересные и простые в приготовлении Keto-рецепты с четкой информацией по пищевой
+                ценности, что превращает приготовление из простой домашней обязанности в идеальный
+                момент умиротворения. Чтобы стать кето-шефом не нужны никакие особые кухонные
+                принадлежности.
+              </p>
+            </li>
+            <li class="motivation__list-item">
+              <img src="./images/subscribe.svg" width="50" height="50" />
+              <h3 class="motivation__list-item-heading">Одна подписка – море пользы</h3>
+              <p class="motivation__list-item-desc">
+                Получайте свежие рецепты каждый месяц прямо на свой любимый девайс, стабильно теряя
+                вес и подстраивайте план под свой прогресс (просто обратитесь в нашу службу
+                поддержки). Оставайтесь в курсе новинок и последних Keto-трендов с нашими
+                VIP-постами.
+              </p>
+            </li>
+            <li class="motivation__list-item">
+              <img src="./images/free-profile.svg" width="50" height="50" />
+              <h3 class="motivation__list-item-heading">Мгновенный бесплатный профиль диеты</h3>
+              <p class="motivation__list-item-desc">
+                Сразу после заполнения опроса вы увидите свой индекс массы тела (ИМТ) и
+                метаболический возраст. Также вы получите рекомендации по поводу ежедневного
+                потребления калорий и воды. И все это бесплатно.
+              </p>
+            </li>
+          </ul>
+          <div class="motivation__button-wrap">
+            <a class="motivation__button" href="#gender__box">Начать</a>
+          </div>
         </div>
       </section>
     </main>
