--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
         </div>
       </section>
       <section class="section motivation__section">
-        <div class="container">
+        <div class="container motivation__container">
           <h2 class="motivation__heading">Добейтесь поставленных целей с нашей Keto-инструкцией</h2>
           <ul class="motivation__list">
             <li class="motivation__list-item">
