Адаптівность большіх кнопок

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                 ></div>
               </div>
               <div class="select-gender__button-content select-gender__button-content--female">
-                <svg class="select-gender__button-content-icon" width="77" height="95">
+                <svg class="select-gender__button-content-icon">
                   <use href="./images/symbol-defs.svg#icon-gender-women"></use>
                 </svg>
                 <p class="select-gender__button-content-desc">Женский</p>
