--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="./sass/main.scss" />
+    <title>Keto diet</title>
   </head>
   <body>
     <header class="header section">
@@ -47,7 +48,7 @@
             <li class="select-gender__list-item">Получите персонализированный план питания</li>
           </ol>
           <div class="select-gender__box">
-            <a class="select-gender__wrap select-gender__wrap--female">
+            <a href="./quiz.html" class="select-gender__wrap select-gender__wrap--female">
               <div class="select-gender__button-background">
                 <div
                   class="select-gender__button-background-first-circle select-gender__button-background-first-circle--female"
@@ -64,7 +65,7 @@
               </div>
             </a>
             <p class="select-gender__button-content-desc">или</p>
-            <a class="select-gender__wrap select-gender__wrap--male">
+            <a href="./quiz.html" class="select-gender__wrap select-gender__wrap--male">
               <div class="select-gender__button-background">
                 <div
                   class="select-gender__button-background-first-circle select-gender__button-background-first-circle--male"
@@ -175,5 +176,6 @@
       </div>
     </footer>
     <script src="./index.js"></script>
+    <!-- <script src="./js/menu.js"></script> -->
   </body>
 </html>
