--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/main.scss" />
@@ -16,8 +16,8 @@
   <body>
     <header class="header section">
       <div class="header__container container">
-        <a class="logo-link header__logo-link" href="./index.html"
-          ><svg class="header__logo" width="134" height="54">
+        <a class="logo-link logo-link--header" href="./index.html"
+          ><svg class="logo">
             <use class="header__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
           </svg>
         </a>
@@ -165,13 +165,13 @@
           <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
         </ul>
         <a class="logo-link logo-link--footer" href="./index.html"
-          ><svg class="footer__logo" width="134" height="54">
-            <use class="footer__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
+          ><svg class="logo logo--footer">
+            <use class="logo-svg--footer" href="./images/symbol-defs.svg#icon-keto-icon"></use>
           </svg>
         </a>
         <div class="footer__license-wrap">
           <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
-          <p class="footer__license-desc">Разработано AppsForFit</p>
+          <p class="footer__license-desc">Разработано Dimas IT</p>
         </div>
       </div>
     </footer>
