--- a/src/quiz.html
+++ b/src/quiz.html
@@ -7,21 +7,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./sass/main.scss" />
-    <title>123</title>
+    <title>quiz-1</title>
   </head>
   <body>
     <header class="header section header-quiz">
       <div class="header__container container">
-        <a class="logo-link header__logo-link" href="./index.html"
-          ><svg class="header__logo" width="134" height="54">
+        <a class="logo-link logo-link--header" href="./index.html"
+          ><svg class="logo">
             <use class="header__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
           </svg>
         </a>
-        <div class="header__burger-wrapper">
+        <!-- <div class="header__burger-wrapper">
           <button class="header__button">
             <span class="burger__line"></span>
           </button>
@@ -30,22 +30,128 @@
             <a href="" class="burger-menu__link">Блог</a>
             <a href="" class="burger-menu__link">Войти</a>
           </div>
-        </div>
+        </div> -->
       </div>
     </header>
     <main>
       <section class="section hero__section">
         <div class="hero__container">
-          <svg class="svg">
+          <svg class="hero__mask-svg">
             <use href="./images/symbol-defs.svg#icon-head-mask"></use>
           </svg>
+          <div class="hero__heading-wrap">
+            <div class="hero__heading-circle-wrap heading-circle">
+              <div class="heading-circle--first"></div>
+              <div class="heading-circle--second"></div>
+              <div class="heading-circle--third"></div>
+              <div class="heading-circle__content">
+                <svg class="heading__logo">
+                  <use
+                    class="header__logo-svg"
+                    href="./images/symbol-defs.svg#icon-physical-activity"
+                  ></use>
+                </svg>
+              </div>
+            </div>
+            <h1 class="hero__heading">Физическая активность</h1>
+          </div>
         </div>
       </section>
-      <section class="section quiz-section">
-        <div class="container quiz-container"></div>
+      <section class="section quiz__section">
+        <div class="container quiz-container">
+          <ul class="quiz-list">
+            <li class="quiz-list__item">
+              <a class="quiz-list__link" href="">МИНИМАЛЬНАЯ ФИЗИЧЕСКАЯ АКТИВНОСТЬ</a>
+            </li>
+            <li class="quiz-list__item">
+              <a class="quiz-list__link" href="">Я ЧАСТО ХОЖУ ПЕШКОМ</a>
+            </li>
+            <li class="quiz-list__item">
+              <a class="quiz-list__link" href="">Я ЗАНИМАЮСЬ 1 - 2 РАЗА В НЕДЕЛЮ</a>
+            </li>
+            <li class="quiz-list__item">
+              <a class="quiz-list__link" href="">Я ЗАНИМАЮСЬ 3 - 5 РАЗ В НЕДЕЛЮ</a>
+            </li>
+            <li class="quiz-list__item">
+              <a class="quiz-list__link" href="">Я ЗАНИМАЮСЬ 5 - 7 РАЗ В НЕДЕЛЮ</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section progress__section">
+        <div class="container progress__container">
+          <div class="progress__percentage"><span class="progress__percentage-value">0</span>%</div>
+          <div class="progress__wrap">
+            <a class="progress__button-link" href="/"
+              ><svg class="progress__button-icon">
+                <use
+                  class="progress__button-svg"
+                  href="./images/symbol-defs.svg#icon-back-circled"
+                ></use></svg
+              >Назад</a
+            >
+            <div class="progress-bar__wrap">
+              <div class="progress-bar__line">
+                <div class="progress-bar__line-back"></div>
+                <div class="progress-bar__line-active"></div>
+              </div>
+              <div class="progress-bar__dot">
+                <div class="progress-bar__circle done">
+                  <span class="progress-bar__dot-desc">Физическая активность</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Энергия</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Лёгкий вес</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Желаемый вес</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Калории</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Мясо</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Овощи</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Продукты</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Лёгкий вес</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Желаемый вес</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Калории</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Мясо</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Овощи</span>
+                </div>
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Продукты</span>
+                </div>
+              </div>
+            </div>
+            <a class="progress__button-link" href="/"
+              >Помощь<svg class="progress__button-icon progress__button-icon--help">
+                <use
+                  class="progress__button-svg"
+                  href="./images/symbol-defs.svg#icon-help-thinner"
+                ></use></svg
+            ></a>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="section footer__section">
+    <!-- <footer class="section footer__section">
       <div class="container footer__container">
         <ul class="footer__menu">
           <li class="footer__menu-item"><a class="footer__menu-link" href="">Блог</a></li>
@@ -59,16 +165,16 @@
           <li class="footer__menu-item"><a class="footer__menu-link" href="">Центр помощи</a></li>
         </ul>
         <a class="logo-link logo-link--footer" href="./index.html"
-          ><svg class="footer__logo" width="134" height="54">
-            <use class="footer__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
+          ><svg class="logo logo--footer">
+            <use class="logo-svg--footer" href="./images/symbol-defs.svg#icon-keto-icon"></use>
           </svg>
         </a>
         <div class="footer__license-wrap">
           <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
-          <p class="footer__license-desc">Разработано AppsForFit</p>
+          <p class="footer__license-desc">Разработано Dimas IT</p>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="./index.js"></script>
   </body>
 </html>
