--- a/src/quiz.html
+++ b/src/quiz.html
@@ -93,10 +93,10 @@
             <div class="progress-bar__wrap">
               <div class="progress-bar__line">
                 <div class="progress-bar__line-back"></div>
-                <div class="progress-bar__line-active"></div>
+                <div class="progress-bar__line-done"></div>
               </div>
               <div class="progress-bar__dot">
-                <div class="progress-bar__circle done">
+                <div class="progress-bar__circle">
                   <span class="progress-bar__dot-desc">Физическая активность</span>
                 </div>
                 <div class="progress-bar__circle">
@@ -175,6 +175,7 @@
         </div>
       </div>
     </footer> -->
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <script src="./quiz.js"></script>
   </body>
 </html>
