--- a/src/quiz.html
+++ b/src/quiz.html
@@ -53,14 +53,14 @@
                 </svg>
               </div>
             </div>
-            <h1 class="hero__heading">Физическая активность</h1>
+            <h1 class="hero__heading"></h1>
           </div>
         </div>
       </section>
       <section class="section quiz__section">
         <div class="container quiz-container">
           <ul class="quiz-list">
-            <li class="quiz-list__item">
+            <!-- <li class="quiz-list__item">
               <a class="quiz-list__link" href="">МИНИМАЛЬНАЯ ФИЗИЧЕСКАЯ АКТИВНОСТЬ</a>
             </li>
             <li class="quiz-list__item">
@@ -74,7 +74,7 @@
             </li>
             <li class="quiz-list__item">
               <a class="quiz-list__link" href="">Я ЗАНИМАЮСЬ 5 - 7 РАЗ В НЕДЕЛЮ</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </section>
@@ -96,6 +96,9 @@
                 <div class="progress-bar__line-done"></div>
               </div>
               <div class="progress-bar__dot">
+                <div class="progress-bar__circle">
+                  <span class="progress-bar__dot-desc">Пол</span>
+                </div>
                 <div class="progress-bar__circle">
                   <span class="progress-bar__dot-desc">Физическая активность</span>
                 </div>
