готов прогрес динамический

--- a/src/quiz.html
+++ b/src/quiz.html
@@ -101,49 +101,7 @@
               </div>
               <div class="progress-bar__dot">
                 <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Пол</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Физическая активность</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Энергия</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Лёгкий вес</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Желаемый вес</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Калории</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Мясо</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Овощи</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Продукты</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Лёгкий вес</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Желаемый вес</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Калории</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Мясо</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Овощи</span>
-                </div>
-                <div class="progress-bar__circle">
-                  <span class="progress-bar__dot-desc">Продукты</span>
+                  <span class="progress-bar__dot-desc">Gender</span>
                 </div>
               </div>
             </div>
