что-то с иконками

--- a/src/quiz.html
+++ b/src/quiz.html
@@ -44,10 +44,10 @@
               <div class="heading-circle--first"></div>
               <div class="heading-circle--second"></div>
               <div class="heading-circle--third"></div>
-              <div class="heading-circle__content">
+              <div class="heading-circle__content back">
                 <svg class="heading__logo">
                   <use
-                    class="header__logo-svg"
+                    class="heading__logo-svg"
                     href="./images/symbol-defs.svg#icon-physical-activity"
                   ></use>
                 </svg>
@@ -82,18 +82,14 @@
         <div class="container progress__container">
           <div class="progress__percentage"><span class="progress__percentage-value">0</span>%</div>
           <div class="progress__wrap">
-            <button
-              type="button"
-              class="progress__button-link progress__button-link--back"
-              href="/"
-            >
+            <a type="button" class="progress__button-link progress__button-link--back" href="/">
               <svg class="progress__button-icon">
                 <use
                   class="progress__button-svg"
                   href="./images/symbol-defs.svg#icon-back-circled"
                 ></use></svg
-              >Назад
-            </button>
+              >Back
+            </a>
             <div class="progress-bar__wrap">
               <div class="progress-bar__line">
                 <div class="progress-bar__line-back"></div>
@@ -106,7 +102,7 @@
               </div>
             </div>
             <button type="button" class="progress__button-link">
-              Помощь<svg class="progress__button-icon progress__button-icon--help">
+              Help<svg class="progress__button-icon progress__button-icon--help">
                 <use
                   class="progress__button-svg"
                   href="./images/symbol-defs.svg#icon-help-thinner"
