--- a/src/quiz.html
+++ b/src/quiz.html
@@ -36,7 +36,7 @@
     <main>
       <section class="section hero__section">
         <div class="hero__container">
-          <svg class="hero__mask-svg">
+          <svg class="hero__mask-svg hero__mask-svg--card">
             <use href="./images/symbol-defs.svg#icon-head-mask"></use>
           </svg>
           <div class="hero__heading-wrap">
@@ -46,10 +46,7 @@
               <div class="heading-circle--third"></div>
               <div class="heading-circle__content back">
                 <svg class="heading__logo">
-                  <use
-                    class="heading__logo-svg"
-                    href="./images/symbol-defs.svg#icon-physical-activity"
-                  ></use>
+                  <use class="heading__logo-svg"></use>
                 </svg>
               </div>
             </div>
@@ -58,7 +55,7 @@
         </div>
       </section>
       <section class="section quiz__section">
-        <div class="container quiz-container">
+        <div class="container quiz-container quiz-container--card">
           <ul class="quiz-list">
             <!-- <li class="quiz-list__item">
               <a class="quiz-list__link" href="">МИНИМАЛЬНАЯ ФИЗИЧЕСКАЯ АКТИВНОСТЬ</a>
@@ -76,6 +73,10 @@
               <a class="quiz-list__link" href="">Я ЗАНИМАЮСЬ 5 - 7 РАЗ В НЕДЕЛЮ</a>
             </li> -->
           </ul>
+          <div class="quiz__card-wrap card-wrap">
+            <p class="card-wrap__desc"></p>
+            <div class="card-wrap__content"></div>
+          </div>
         </div>
       </section>
       <section class="section progress__section">
