Сделал форму для выбора продуктов

--- a/src/quiz.html
+++ b/src/quiz.html
@@ -58,8 +58,9 @@
             </div>
           </div>
           <form class="quiz__choice-form" action="">
+            <p class="quiz__choice-form-desc"></p>
             <div class="quiz__choice-form-wrap">
-              <div class="quiz__choice-form-element">
+              <!-- <div class="quiz__choice-form-element">
                 <input
                   class="visually-hidden pork-hidden-checkbox"
                   type="checkbox"
@@ -100,7 +101,7 @@
                     </div>
                   </div>
                 </label>
-              </div>
+              </div> -->
             </div>
             <div class="quiz__choice__button-wrap">
               <button type="submit" class="quiz__choice__button-link">
