страницы квиза настроены

--- a/src/quiz.html
+++ b/src/quiz.html
@@ -114,6 +114,20 @@
               </button>
             </div>
           </form>
+          <form class="quiz__choice-line-form" action="">
+            <p class="quiz__choice-line-form-desc">It is possible to select multiple answers:</p>
+            <div class="quiz__choice-line-form-wrap"></div>
+            <div class="quiz__choice-line__button-wrap">
+              <button type="submit" class="quiz__choice-line__button-link">
+                Continue<svg class="quiz__choice-line__button-icon">
+                  <use
+                    class="quiz__choice__button-svg"
+                    href="./images/symbol-defs.svg#icon-next"
+                  ></use>
+                </svg>
+              </button>
+            </div>
+          </form>
         </div>
       </section>
       <section class="section progress__section">
