--- a/src/quiz.html
+++ b/src/quiz.html
@@ -16,11 +16,11 @@
   <body>
     <header class="header section header-quiz">
       <div class="header__container container">
-        <a class="logo-link logo-link--header" href="./index.html"
-          ><svg class="logo">
+        <div class="logo-link logo-link--header" href="./index.html">
+          <svg class="logo">
             <use class="header__logo-svg" href="./images/symbol-defs.svg#icon-keto-icon"></use>
           </svg>
-        </a>
+        </div>
       </div>
     </header>
     <main>
