--- a/src/index.html
+++ b/src/index.html
@@ -172,6 +172,7 @@
         <div class="footer__license-wrap">
           <h3 class="footer__license-heading">2022 ВСЕ ПРАВА ЗАЩИЩЕНЫ</h3>
           <p class="footer__license-desc">Разработано Dimas IT</p>
+          <button class="reset-button">Reset answers</button>
         </div>
       </div>
     </footer>
