возврат на главную

--- a/src/quiz.html
+++ b/src/quiz.html
@@ -134,7 +134,11 @@
         <div class="container progress__container">
           <div class="progress__percentage"><span class="progress__percentage-value">0</span>%</div>
           <div class="progress__wrap">
-            <a type="button" class="progress__button-link progress__button-link--back" href="/">
+            <a
+              type="button"
+              class="progress__button-link progress__button-link--back"
+              href="/index.html"
+            >
               <svg class="progress__button-icon">
                 <use
                   class="progress__button-svg"
