--- a/src/quiz.html
+++ b/src/quiz.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <section class="section hero__section">
-        <div class="hero__container">
+        <div class="hero__container container">
           <svg class="hero__mask-svg hero__mask-svg--card">
             <use href="./images/symbol-defs.svg#icon-head-mask"></use>
           </svg>
