--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,9 @@
     <footer class="section footer__section">
       <div class="container footer__container">
         <ul class="footer__menu">
-          <li class="footer__menu-item"><a class="footer__menu-link" href="">Блог</a></li>
+          <li class="footer__menu-item">
+            <a class="footer__menu-link" href="./measurements.html">Блог</a>
+          </li>
           <li class="footer__menu-item"><a class="footer__menu-link" href="">Общие условия</a></li>
           <li class="footer__menu-item">
             <a class="footer__menu-link" href="">Политика защиты данных</a>
