--- a/src/measurements.html
+++ b/src/measurements.html
@@ -309,7 +309,15 @@
             <div class="ldBar loader label-center" id="loader" style="width: 350px; height: 350px">
               <div class="loader__bg"></div>
             </div>
-            <div class="loader__desc"></div>
+            <div class="loader__desc">
+              <div class="loader__desc-wrap">
+                <div class="desc desc--hidden">Processing entered data...</div>
+                <div class="desc desc--hidden">Calculating the dietary profile...</div>
+                <div class="desc desc--hidden">Calculating the amount of food...</div>
+                <div class="desc desc--hidden">Selection of suitable recipes...</div>
+                <div class="desc desc--hidden">Your personalized meal plan is ready!</div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
