--- a/src/measurements.html
+++ b/src/measurements.html
@@ -187,12 +187,7 @@
                 ></div>
               </div>
               <div class="measurements__form-button-wrap">
-                <button
-                  type="submit"
-                  class="measurements__form-button"
-                  data-action="imperial"
-                  onclick="window.location='./index.html';"
-                >
+                <button type="submit" class="measurements__form-button" data-action="imperial">
                   Continue<svg class="measurements__form-button-icon">
                     <use href="./images/symbol-defs.svg#icon-next"></use>
                   </svg>
@@ -292,12 +287,7 @@
                 <div class="measurements__form-notification" data-type="metric-target-weight"></div>
               </div>
               <div class="measurements__form-button-wrap">
-                <button
-                  type="submit"
-                  class="measurements__form-button"
-                  data-action="metric"
-                  onclick="window.location='./index.html';"
-                >
+                <button type="submit" class="measurements__form-button" data-action="metric">
                   Continue<svg class="measurements__form-button-icon">
                     <use href="./images/symbol-defs.svg#icon-next"></use>
                   </svg>
@@ -306,9 +296,7 @@
             </form>
           </div>
           <div class="loader__wrap">
-            <div class="ldBar loader label-center" id="loader" style="width: 350px; height: 350px">
-              <div class="loader__bg"></div>
-            </div>
+            <div class="progress loader"><div class="loader__bg"></div></div>
             <div class="loader__desc">
               <div class="loader__desc-wrap">
                 <div class="desc desc--hidden">Processing entered data...</div>
