final two cards

--- a/src/measurements.html
+++ b/src/measurements.html
@@ -144,7 +144,7 @@
                 <input
                   class="measurements__form-input"
                   type="number"
-                  id="weight-lb"
+                  id="weight-imperic"
                   required
                   min="90"
                   max="400"
@@ -153,7 +153,7 @@
                   data-type="imperial-weight"
                   autocomplete="off"
                 />
-                <label class="measurements__form-label" for="weight-lb">lb</label>
+                <label class="measurements__form-label" for="weight-imperic">lb</label>
                 <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-3-1"></use>
                 </svg>
@@ -165,7 +165,7 @@
                 <input
                   class="measurements__form-input"
                   type="number"
-                  id="target-weight-lb"
+                  id="target-weight-imperic"
                   required
                   min="90"
                   max="400"
@@ -174,7 +174,7 @@
                   data-type="imperial-target-weight"
                   autocomplete="off"
                 />
-                <label class="measurements__form-label" for="target-weight-lb">lb</label>
+                <label class="measurements__form-label" for="target-weight-imperic">lb</label>
                 <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-4-1"></use>
                 </svg>
@@ -224,7 +224,7 @@
                 <input
                   class="measurements__form-input"
                   type="number"
-                  id="height-cm"
+                  id="height-metric"
                   required
                   min="135"
                   max="255"
@@ -233,7 +233,7 @@
                   data-type="metric-height-cm"
                   autocomplete="off"
                 />
-                <label class="measurements__form-label" for="height-cm">Height (cm)</label>
+                <label class="measurements__form-label" for="height-metric">Height (cm)</label>
                 <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-2-1"></use>
                 </svg>
@@ -245,7 +245,7 @@
                 <input
                   class="measurements__form-input"
                   type="number"
-                  id="weight-kg"
+                  id="weight-metric"
                   required
                   min="40"
                   max="180"
@@ -254,7 +254,7 @@
                   data-type="metric-weight"
                   autocomplete="off"
                 />
-                <label class="measurements__form-label" for="weight-kg">Weight (kg)</label>
+                <label class="measurements__form-label" for="weight-metric">Weight (kg)</label>
                 <svg class="measurements__form-input-icon">
                   <use href="./images/symbol-defs.svg#measurments-3-1"></use>
                 </svg>
@@ -266,7 +266,7 @@
                 <input
                   class="measurements__form-input"
                   type="number"
-                  id="target-weight-kg"
+                  id="target-weight-metric"
                   required
                   min="40"
                   max="180"
@@ -275,7 +275,7 @@
                   data-type="metric-target-weight"
                   autocomplete="off"
                 />
-                <label class="measurements__form-label" for="target-weight-kg"
+                <label class="measurements__form-label" for="target-weight-metric"
                   >Target weight (kg)</label
                 >
                 <svg class="measurements__form-input-icon">
